# sample-prometheus-app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  app.py  pyproject.toml
