[project]
name = "sample-prometheus-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0.3",
    "prometheus-flask-exporter>=0.23.1",
    "prometheus-summary>=0.1.2",
]

[tool.uv]
dev-dependencies = [
    "python-lsp-server[all]>=1.12.0",
    "ruff>=0.6.7",
]
